--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "easyshop",
+  "name": "entrevistia",
   "version": "0.1.0",
   "type": "module",
   "private": true,
@@ -16,7 +16,8 @@
     "next": "15.1.5",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
