--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/eslintrc": "^3",
     "@eslint/js": "9.18.0",
+    "@iconify/react": "legacy",
     "@next/eslint-plugin-next": "^15.1.5",
     "@types/node": "^20",
     "@types/react": "^19",
