--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@heroui/react": "^2.6.14",
     "framer-motion": "^12.4.2",
+    "moongose": "^1.0.0",
     "next": "15.1.5",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
