--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@heroui/react": "^2.6.14",
+    "bcryptjs": "^3.0.0",
     "framer-motion": "^12.4.2",
     "moongose": "^1.0.0",
     "next": "15.1.5",
